--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <ul>
    <li><a href="bigfix-mark.github.io/Docs/BigFix Capacity Planning v9.x.18.pdf" target="_blank">BigFix Capacity Planning</a></li>
    <li><a href="bigfix-mark.github.io/Docs/BigFix Maintenance Guide v9.x.2.pdf" target="_blank">BigFix Maintenance Guide</a></li>
+   <li><a href="bigfix-mark.github.io/Docs/MX Performance Toolkit for BigFix v2.pdf" target="_blank">MX Performance Toolkit for BigFix</a></li>
 </ul>
 </body>
 </html>
