HTML revamp.  Still ugly though.

--- a/index.html
+++ b/index.html
@@ -1,12 +1,20 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>BigFix Performance & Security Content</h1>
-<p>The following resources are available for BigFix performance.</p>
+<img src="Images/bigfix-text-logo.png">
+<h2>BigFix Performance & Capacity Planning Resources</h1>
+<p>BigFix a highly scalable and powerful product.</p>
+<p>The following resources are provided by to simplify the deployment and management of BigFix.</p>
+<h3>Documentation</h3>
 <ul>
    <li><a href="bigfix-mark.github.io/Docs/BigFix Capacity Planning v9.x.18.pdf" target="_blank">BigFix Capacity Planning</a></li>
    <li><a href="bigfix-mark.github.io/Docs/BigFix Maintenance Guide v9.x.2.pdf" target="_blank">BigFix Maintenance Guide</a></li>
    <li><a href="bigfix-mark.github.io/Docs/MX Performance Toolkit for BigFix v2.pdf" target="_blank">MX Performance Toolkit for BigFix</a></li>
+</ul>
+<h3>Tools</h3>
+<ul>
+   <li><a href="bigfix-mark.github.io/Tools/MXToolkit.zip" download="download">MXToolkit Distribution for Windows</a></li>
+   <li><a href="bigfix-mark.github.io/Tools/MXToolkit.tar.gz" download="download">MXToolkit Distribution for Linux</a></li>
 </ul>
 </body>
 </html>
