--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
-<!DOCTYPE html>
-<html>
+---
+layout: default
+---
 <body>
 <img src="Images/bigfix-text-logo.png">
 <h2>BigFix Performance & Capacity Planning Resources</h1>
@@ -17,4 +18,3 @@
    <li><a href="bigfix-mark.github.io/Tools/MXToolkit.tar.gz" download="download">MXToolkit Distribution for Linux</a></li>
 </ul>
 </body>
-</html>
