--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@ layout: default
 ---
 <body>
 <img src="Images/bigfix-text-logo.png">
-<p><b>BigFix a highly scalable and powerful product.</b></p>
-<p><b>The following resources are provided by to simplify the deployment and management of BigFix.</b></p>
+<p><strong>BigFix is a highly scalable and powerful product.</strong></p>
+<p><strong>The following resources are provided by to simplify the deployment and management of BigFix.</strong></p>
 <h3>Documentation</h3>
 <ul>
    <li><a href="bigfix-mark.github.io/Docs/BigFix Capacity Planning v9.x.18.pdf" target="_blank">BigFix Capacity Planning</a></li>
