Transparent image change.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 <body>
-<img src="Images/bigfix-text-logo.png">
+<img src="Images/bigfix-text-logo-big.png">
 <p><strong>BigFix is a highly scalable and powerful product.</strong></p>
 <p><strong>The following resources are provided by to simplify the deployment and management of BigFix.</strong></p>
 <h3>Documentation</h3>
