Added blog content.

--- a/index.html
+++ b/index.html
@@ -16,4 +16,8 @@ layout: default
    <li><a href="bigfix-mark.github.io/Tools/MXToolkit.zip" download="download">MXToolkit Distribution for Windows</a></li>
    <li><a href="bigfix-mark.github.io/Tools/MXToolkit.tar.gz" download="download">MXToolkit Distribution for Linux</a></li>
 </ul>
+<h3>Blogs</h3>
+<ul>
+   <li><a href="bigfix-mark.github.io/Blogs/BigFix Relay Scale Blog v3.pdf" target="_blank">BigFix Relay Scale Blog</a></li>
+</ul>
 </body>
