--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ layout: default
 <p><strong>The following resources are provided by to simplify the deployment and management of BigFix.</strong></p>
 <h3>Documentation</h3>
 <ul>
-   <li><a href="bigfix-mark.github.io/Docs/BigFix Capacity Planning v10.x.3.pdf" target="_blank">BigFix Capacity Planning</a></li>
+   <li><a href="bigfix-mark.github.io/Docs/BigFix Capacity Planning v10.x.3a.pdf" target="_blank">BigFix Capacity Planning</a></li>
    <li><a href="bigfix-mark.github.io/Docs/BigFix Maintenance Guide v10.x.1.pdf" target="_blank">BigFix Maintenance Guide</a></li>
    <li><a href="bigfix-mark.github.io/Docs/MX Performance Toolkit for BigFix v2.pdf" target="_blank">MX Performance Toolkit for BigFix</a></li>
 </ul>
