--- a/index.html
+++ b/index.html
@@ -8,18 +8,18 @@ layout: default
 <h3>Documentation</h3>
 <ul>
    <li><a href="Docs/BigFix Capacity Planning v10.x.4.pdf" target="_blank">BigFix Capacity Planning</a></li>
-   <li><a href="bigfix-mark.github.io/Docs/BigFix Maintenance Guide v10.x.2.pdf" target="_blank">BigFix Maintenance Guide</a></li>
-   <li><a href="bigfix-mark.github.io/Docs/MX Performance Toolkit for BigFix v2.pdf" target="_blank">MX Performance Toolkit for BigFix</a></li>
+   <li><a href="Docs/BigFix Maintenance Guide v10.x.2.pdf" target="_blank">BigFix Maintenance Guide</a></li>
+   <li><a href="Docs/MX Performance Toolkit for BigFix v2.pdf" target="_blank">MX Performance Toolkit for BigFix</a></li>
 </ul>
 <h3>Tools</h3>
 <ul>
    <li><a href="Tools/MXToolkit.zip" download="download">MXToolkit Distribution for Windows</a></li>
-   <li><a href="bigfix-mark.github.io/Tools/MXToolkit.tar.gz" download="download">MXToolkit Distribution for Linux</a></li>
+   <li><a href="Tools/MXToolkit.tar.gz" download="download">MXToolkit Distribution for Linux</a></li>
 </ul>
 <h3>Blogs</h3>
 <ul>
-   <li><a href="bigfix-mark.github.io/Blogs/BigFix FillDB Performance v1.pdf" target="_blank">BigFix FillDB Performance Blog</a></li>
-   <li><a href="bigfix-mark.github.io/Blogs/BigFix MLE Enablement v1.2.pdf" target="_blank">BigFix MLE Enablement Blog</a></li>
-   <li><a href="bigfix-mark.github.io/Blogs/BigFix Relay Scale Blog v3.pdf" target="_blank">BigFix Relay Scale Blog</a></li>
+   <li><a href="Blogs/BigFix FillDB Performance v1.pdf" target="_blank">BigFix FillDB Performance Blog</a></li>
+   <li><a href="Blogs/BigFix MLE Enablement v1.2.pdf" target="_blank">BigFix MLE Enablement Blog</a></li>
+   <li><a href="Blogs/BigFix Relay Scale Blog v3.pdf" target="_blank">BigFix Relay Scale Blog</a></li>
 </ul>
 </body>
