--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@ layout: default
 <p><strong>The following resources are provided by to simplify the deployment and management of BigFix.</strong></p>
 <h3>Documentation</h3>
 <ul>
-   <li><a href="Docs/BigFix Capacity Planning v10.x.6.pdf" target="_blank">BigFix Capacity Planning</a></li>
-   <li><a href="Docs/BigFix Maintenance Guide v10.x.2.pdf" target="_blank">BigFix Maintenance Guide</a></li>
-   <li><a href="Docs/MX Performance Toolkit for BigFix v2.pdf" target="_blank">MX Performance Toolkit for BigFix</a></li>
+   <li><a href="Docs/BigFix Capacity Planning v10.x.8.pdf" target="_blank">BigFix Capacity Planning</a></li>
+   <li><a href="Docs/BigFix Maintenance Guide v10.x.3.pdf" target="_blank">BigFix Maintenance Guide</a></li>
+   <li><a href="Docs/MX Performance Toolkit for BigFix v10.x.3.pdf" target="_blank">MX Performance Toolkit for BigFix</a></li>
 </ul>
 <h3>Tools</h3>
 <ul>
@@ -18,6 +18,7 @@ layout: default
 </ul>
 <h3>Blogs</h3>
 <ul>
+   <li><a href="Blogs/BigFix 10 Capacity Planning v1.pdf" target="_blank">BigFix 10 Capacity Planning Blog</a></li>
    <li><a href="Blogs/BigFix FillDB Performance v1.pdf" target="_blank">BigFix FillDB Performance Blog</a></li>
    <li><a href="Blogs/BigFix MLE Enablement v1.2.pdf" target="_blank">BigFix MLE Enablement Blog</a></li>
    <li><a href="Blogs/BigFix Relay Scale Blog v3.pdf" target="_blank">BigFix Relay Scale Blog</a></li>
