--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@ layout: default
 <h3>Blogs</h3>
 <ul>
    <li><a href="Blogs/BigFix 10 Capacity Planning v1.pdf" target="_blank">BigFix 10 Capacity Planning Blog</a></li>
+   <li><a href="Blogs/BigFix 10 Monitoring v2.pdf" target="_blank">BigFix 10 Infrastructure Monitoring Blog</a></li>
    <li><a href="Blogs/BigFix FillDB Performance v1.pdf" target="_blank">BigFix FillDB Performance Blog</a></li>
    <li><a href="Blogs/BigFix MLE Enablement v1.2.pdf" target="_blank">BigFix MLE Enablement Blog</a></li>
    <li><a href="Blogs/BigFix Relay Scale Blog v3.pdf" target="_blank">BigFix Relay Scale Blog</a></li>
