--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ layout: default
 <p><strong>The following resources are provided by to simplify the deployment and management of BigFix.</strong></p>
 <h3>Documentation</h3>
 <ul>
-   <li><a href="Docs/BigFix Capacity Planning v10.x.9.pdf" target="_blank">BigFix Capacity Planning</a></li>
+   <li><a href="Docs/BigFix Capacity Planning v10.pdf" target="_blank">BigFix Capacity Planning</a></li>
    <li><a href="Docs/BigFix Maintenance Guide v10.x.3.pdf" target="_blank">BigFix Maintenance Guide</a></li>
    <li><a href="Docs/MX Performance Toolkit for BigFix v10.x.3.pdf" target="_blank">MX Performance Toolkit for BigFix</a></li>
 </ul>
