--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@ layout: default
 <h3>Documentation</h3>
 <ul>
    <li><a href="Docs/BigFix Capacity Planning v10.pdf" target="_blank">BigFix Capacity Planning</a></li>
-   <li><a href="Docs/BigFix Maintenance Guide v10.x.3.pdf" target="_blank">BigFix Maintenance Guide</a></li>
-   <li><a href="Docs/MX Performance Toolkit for BigFix v10.x.3.pdf" target="_blank">MX Performance Toolkit for BigFix</a></li>
+   <li><a href="Docs/BigFix Maintenance Guide v10.pdf" target="_blank">BigFix Maintenance Guide</a></li>
+   <li><a href="Docs/BigFix NFRs - A Checklist Approach v10.pdf" target="_blank">BigFix NFRs - A Checklist Approach</a></li>
+   <li><a href="Docs/MX Performance Toolkit for BigFix v10.pdf" target="_blank">MX Performance Toolkit for BigFix</a></li>
 </ul>
 <h3>Tools</h3>
 <ul>
