--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@ layout: default
 </ul>
 <h3>Blogs</h3>
 <ul>
+   <li><a href="Blogs/BigFix 11 Improvements v1.pdf" target="_blank">BigFix 11 Improvements Blog</a></li>
    <li><a href="Blogs/BigFix 10 Capacity Planning v1.pdf" target="_blank">BigFix 10 Capacity Planning Blog</a></li>
    <li><a href="Blogs/BigFix 10 Relay Efficiency v1.pdf" target="_blank">BigFix 10 Relay Efficiency Blog</a></li>
    <li><a href="Blogs/BigFix 10 Monitoring v3.pdf" target="_blank">BigFix 10 Infrastructure Monitoring Blog</a></li>
